--- a/infa.html
+++ b/infa.html
@@ -11,7 +11,7 @@
   <body class="page">
     <div class="container infa-container">
       <header>
-        <img src="images/back.png" alt="" width="15" height="30">
+        <a href="index.html"><img src="images/back.png" alt="" width="15" height="30"></a>
         <img src="images/Nike.png" alt="" width="60" height="50">
         <img src="images/shopping bag_2.png" alt="" width="30" height="30">
       </header>
